# ai-mail-categorizer

./: .env.example  .gitignore  justfile  main.py  pyproject.toml
src/ai_mail_categorizer/: __init__.py  config.py  help.py  log.py
