[project]
name = "ai-mail-categorizer"
version = "0.1.0"
description = "Tool that automatically categorize emails"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
